--- a/html/competicion.html
+++ b/html/competicion.html
@@ -50,7 +50,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Amortiguador</h3>
-                        <img src="../img/amortiguador deportivo.webp" alt="">
+                        <img src="../img/amortiguador deportivo.webp" alt="amortiguador">
                         <p>El amortiguador es una parte clave en la suspensión del automóvil y es el elemento mecánico
                             encargado de regular las oscilaciones naturales del resorte causadas por las irregularidades
                             de las calles</p>
@@ -59,7 +59,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Espirales o resortes helicoidales</h3>
-                        <img src="../img/espirales deportivo.jpg" alt="">
+                        <img src="../img/espirales deportivo.jpg" alt="espiral">
                         <p>En el aspecto técnico, los espirales, unas varillas de acero enrollado, son los encargados de
                             soportar el peso del auto y absorber las irregularidades del camino; los amortiguadores
                             controlas las oscilaciones del resorte</p>
@@ -68,7 +68,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Bases de amortiguador Rotuladas</h3>
-                        <img src="../img/base rotulada.jpg" alt="">
+                        <img src="../img/base rotulada.jpg" alt="cazoleta">
                         <p>permiten corregir el camber y el avance de las ruedas en la suspension</p>
                     </div>
                 </div>
