--- a/html/neumatica.html
+++ b/html/neumatica.html
@@ -48,7 +48,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Bolsa de aire</h3>
-                        <img src="../img/oferta Bolsas.webp" alt="">
+                        <img src="../img/oferta Bolsas.webp" alt="pulmon de suspension">
                         <p>La Bolsa de Aire es una pieza fundamental de la suspensión neumática, la cual funciona como
                             un contenedor de Aire comprimido que con la presión adecuada y en conjuntos con los demás
                             componentes permite que la suspensión suba o baje de acuerdo a la carga que trae el
@@ -58,7 +58,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Tanque reservorio</h3>
-                        <img src="../img/tanque neumatica.webp" alt="">
+                        <img src="../img/tanque neumatica.webp" alt="tanque reservorio">
                         <p>es el encargado de almacenar el aire para el correcto funcionamiento de la suspension
                         </p>
                     </div>
@@ -66,7 +66,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Bloque de valvulas</h3>
-                        <img src="../img/bloque de valvulas.webp" alt="">
+                        <img src="../img/bloque de valvulas.webp" alt="bloque de valvulas">
                         <p>El bloque de válvulas es un componente pequeño pero importante del sistema de suspensión
                             neumática, se encarga de la distribución del aire presurizado a las bolsas de aire del
                             vehiculo</p>
@@ -75,7 +75,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Compresor</h3>
-                        <img src="../img/compresor.webp" alt="">
+                        <img src="../img/compresor.webp" alt="compresor de aire">
                         <p>Es una de las partes mas importantes de la suspension neumatica ya que esta encargado de
                             comprimir el aire que sera almacenado en el tanque reservorio</p>
                     </div>
@@ -83,7 +83,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Central de valvulas</h3>
-                        <img src="../img/central de valvulas.webp" alt="">
+                        <img src="../img/central de valvulas.webp" alt="central de valvulas">
                         <p>Desde la central se controlara de forma automatica o manual la apertura y cierre de las
                             valvulas consiguiendo asi la altura y confort deseada en la suspension</p>
                     </div>
