--- a/html/regulable.html
+++ b/html/regulable.html
@@ -46,7 +46,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Amortiguador Regulable</h3>
-                        <img src="../img/amortiguador regulable.webp" alt="">
+                        <img src="../img/amortiguador regulable.webp" alt="amortiguador regulable">
                         <p>al igual que el amortiguador de competicion este es una parte clave en la suspensión del
                             automóvil y es el elemento mecánico
                             encargado de regular las oscilaciones naturales del resorte causadas por las irregularidades
@@ -57,7 +57,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Resortes Helicoidales y base regulable</h3>
-                        <img src="../img/espirales regulable.png" alt="">
+                        <img src="../img/espirales regulable.png" alt="espiral suspension">
                         <p>comparte la funcion de los espirales helicoidales de la suspension deportiva pero sumandodo
                             una base modificada para poder controlar la altura del vehiculo</p>
                     </div>
@@ -65,7 +65,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Base de amortiguador</h3>
-                        <img src="../img/cazoleta fja.jpg" alt="">
+                        <img src="../img/cazoleta fja.jpg" alt="cazoleta fija">
                         <p>La base del amortiguador a diferencia de la de las suspensiones de competicion es fija,
                             obteniendo asi limitacion a la hora de regular la posicion de las ruedas</p>
                     </div>
