--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="cards-conteiner">
                 <div class="card">
                     <div class="content">
-                        <img src="img/kit neumatica airlift.jpg" alt="">
+                        <img src="img/kit neumatica airlift.jpg" alt="kit neumatica">
                     </div>
                     <div class="botton">
                         <a href="html/neumatica.html">Suspension neumatica</a>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card">
                     <div class="content">
-                        <img src="img/Kit regulable castor.webp" alt="">
+                        <img src="img/Kit regulable castor.webp" alt="kit regulable">
                     </div>
                     <div class="botton">
                         <a href="html/regulable.html">Suspension Regulable</a>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="card">
                     <div class="content">
-                        <img src="img/BILSTEIN_regulable.jpg" alt="">
+                        <img src="img/BILSTEIN_regulable.jpg" alt="kit deportivo">
                     </div>
                     <div class="botton">
                         <a href="html/competicion.html">Suspension Competicion</a>
