--- a/html/competicion.html
+++ b/html/competicion.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina sobre suspension de competicion</title>
+    <meta name="description" content="componentes de la suspension de competicion">
+    <meta name="keywords" content="suspension de competicion,componentes de la suspension deportiva">
+    <meta name="author" content="Franco Stagnoli">   
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
