--- a/html/galeria.html
+++ b/html/galeria.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de fotos</title>
+    <meta name="description" content="galeria de fotos de autos con suspension modificada">
+    <meta name="keywords" content="bmw, peugeot, audi, VW, nissan">
+    <meta name="author" content="Franco Stagnoli">   
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="grid-conteiner">
