--- a/html/neumatica.html
+++ b/html/neumatica.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina sobre suspension neumatica</title>
+    <meta name="description" content="Suspension neumatica y sus componentes">
+    <meta name="keywords" content="suspension neumatica, compresor, pulmones, amortiguadores">
+    <meta name="author" content="Franco Stagnoli">   
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
