--- a/html/regulable.html
+++ b/html/regulable.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina sobre suspension regulable</title>
+    <meta name="description" content="Suspension regulable componentes para el vehiculo">
+    <meta name="keywords" content="suspension,regulacion en altura, como modificar altura">
+    <meta name="author" content="Franco Stagnoli">   
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
