--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suspensiones de un Vehiculo</title>
+    <meta name="description" content="tipos de suspensiones que existen para tu vehiculo">
+    <meta name="keywords"
+        content="Suspension, suspension neumatica, suspension deportiva, suspension roscadas, componentes de la suspension">
+    <meta name="author" content="Franco Stagnoli">    
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body class="grid-conteiner">
